# hermecho

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements-dev.txt  requirements-vibevoice.txt  requirements.txt
docs/: DESIGN.md  whisper-artifact-fixes.md
docs/plans/: 2025-03-15-multi-speaker-design.md  2025-03-15-multi-speaker-implementation.md  2025-03-15-reduce-name-hallucination-brainstorm.md  2025-03-15-vad-implementation.md  2026-04-19-subtitle-timing-review.md
src/: asr_comparison.py  main.py  models.py  openrouter_fallback.py  retry.py  subtitles.py  timing_review.py  transcription.py  translation.py  utils.py  vibevoice_asr.py  video_processing.py
src/hermecho/: __init__.py  cli.py  gemini_sdk.py  pipeline.py  prompts.py  subtitles.py  transcription.py  translation.py  utils.py
tests/: conftest.py  test_asr_comparison.py  test_main_cli.py  test_openrouter_fallback.py  test_timing_review.py  test_transcription.py  test_transcription_multimodal.py  test_video_processing.py
